<resources>
    <string name="app_name">MSS_AndroidApplication_Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">MSS Client : Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_menu_title">Welcome To MS Solutions Login Screen</string>
    <string name="prompt_hint_email">Email or Username</string>
    <string name="prompt_hint_passwd">Password</string>
    <string name="prompt_btn_login">Login</string>
    <string name="prompt_btn_register">Register</string>
    <string name="prompt_txtView_email">Email</string>
    <string name="prompt_txtView_passwd">Password</string>
    <string name="todo">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles_admin_merchant">
        <item>Home</item>
        <item>Notifications</item>
        <item>Transactions</item>
        <item>Reporting And Statistics</item>
        <item>Profile</item>
        <item>Users Management</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_activity_titles_users_merchant">
        <item>Home</item>
        <item>Notifications</item>
        <item>Transactions</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txt_view_android_studio_name">Android Studio</string>
    <string name="txt_view_android_studio_email">android.studio@android.com</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="transactions">Transactions</string>
    <string name="users_gst">Users Management</string>
    <string name="id_usr_profile">Id :</string>
    <string name="prompt_id_usr_profile">Id Here </string>
    <string name="username_usr_profile">User Name :</string>
    <string name="prompt_username_usr_profile">User Name Here</string>
    <string name="email_usr_profile">Email :</string>
    <string name="prompt_email_usr_profile">Email Here</string>
    <string name="prompt_firstname_usr_profile">First Name Here</string>
    <string name="prompt_lastname_usr_profile">Last Name Here</string>
    <string name="prompt_password_usr_profile">Password Here</string>
    <string name="prompt_phonenumber_usr_profile">Phone Number Here</string>
    <string name="title_activity_home_admin_marchant">HomeAdminMarchantActivity</string>
    <string name="other">Other</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_settings">Password Settings</string>
    <string name="old_password_here">Old Password Here</string>
    <string name="new_password_here">New Password Here</string>
    <string name="confirm_new_password_here">Confirm New Password Here</string>
    <string name="change_password_settings">  Change Password Settings</string>
    <string name="email_address_settings">Email Address Settings</string>
    <string name="property_image">Property Image</string>
    <string name="id_transaction">Id Transaction</string>
    <string name="id_merchant">Id Merchant</string>
    <string name="id_terminal_merchant">Id Terminal Merchant</string>
    <string name="id_host">Id Host</string>
    <string name="amount">Amount</string>
    <string name="transaction_status">Transaction Status :</string>
    <string name="toolbar_transactions_title">Transactions</string>
    <string name="action_transactions_search">Search</string>
    <string name="search_transactions_hint">Type here…</string>
    <string name="etat_cloture">Etat Cloture</string>
    <string name="current_date_transaction">Current Date Transaction</string>
    <string name="time_system_transaction">Time System Transaction</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="response_code">Response Code</string>
    <string name="approval_code">Approval Code</string>
    <string name="card_mask_pan">Card Mask (Pan)</string>
    <string name="bank_ticket">Bank Ticket</string>
    <string name="application_identifier_card">Application Identifier Card</string>
    <string name="application_cryptogram_sign">Application Cryptogram (Sign)</string>
    <string name="terminal_verification_result_tvr">Terminal Verification Result (TVR)</string>
    <string name="transaction_status_information_tsi">Transaction Status Information (TSI)</string>
    <string name="card_used_for_payement">Card Used For Payement</string>
    <string name="num_ro_facture">Numéro Facture</string>
    <string name="ticket_to_keep">Ticket to keep</string>
    <string name="thank_you_for_your_visit">Thank you for your visit</string>
    <string name="full_name_usermerchant">Full Name UserMerchant</string>
    <string name="email_usermerchant">Email UserMerchant</string>
    <string name="phone_number_usermerchant">Phone Number UserMerchant</string>
    <string name="user_name_usermerchant">User Name UserMerchant</string>
    <string name="organization_type_usermerchant">Organization Type UserMerchant</string>
    <string name="user_merchant_status">User Merchant Status</string>
    <string name="password_here">Password Here</string>
    <string name="confirm_password_here">Confirm Password Here</string>
    <string name="organizationId_prompt">Choose an organization type </string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_of_request">Bank Of Request</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="your_email_here_for_password_recovery">Your Email Here For Password Recovery</string>
    <string name="next">Next</string>
    <string name="your_verification_code_here_for_password_recovery">Your Verification Code Here</string>
    <string name="back">Back</string>
    <string name="your_email_for_password_recovery_here">Your Email For Password Recovery Here</string>
    <string name="your_new_password_for_recovery_here">Your New Password For Recovery Here</string>
    <string name="your_confirmation_password_for_recovery_here">Your Confirmation Password For Recovery Here</string>
    <string name="reset_password">Reset Password</string>
    <string name="reporting_and_statistics">Reporting And Statistics</string>
    <string name="reporting_type_name">Reporting Type Name</string>
    <string name="_500">500</string>
    <string-array name="organization_types_array">
        <item>Merchant</item>
        <item>Bank</item>
    </string-array>
    <string-array name="transactions_status_types_array">
        <item>Pie Chart</item>
        <item>Line Chart</item>
        <item>Bar Chart</item>
    </string-array>
    <string name="prompt_transactions_status_types">Please Select A Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="show_report">Show Report</string>
    <string name="toggle_y_values">Toggle Y-Values</string>
    <string name="toggle_icons">Toggle Icons</string>
    <string name="toggle_x_values">Toggle X-Values</string>
    <string name="toggle_percent">Toggle Percent</string>
    <string name="toggle_hole">Toggle Hole</string>
    <string name="animate_x">Animate X</string>
    <string name="animate_y">Animate Y</string>
    <string name="animate_xy">Animate XY</string>
    <string name="draw_centertext">Draw CenterText</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="spin_animation">Spin Animation</string>
    <string name="horizontal_bar_chart">Horizontal Bar Chart</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="notifications_merchant_channel_name">Global channel</string>
    <string name="notifications_merchant_channel_description">Notifications sent from the app merchant</string>
    <string name="rejected_transaction_details">Rejected Transaction Details</string>
</resources>