<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="15dp"
    android:background="@color/five">

    <TextView
        android:id="@+id/txtView_RejectedTransDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rejected_transaction_details"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/blue_grey"/>

    <TextView
        android:id="@+id/txtView_Rejected_TrnsType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_type"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_info_black_24dp"
        android:layout_below="@+id/txtView_RejectedTransDetails"/>

    <TextView
        android:id="@+id/txtView_Rejected_TrnsCardPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_used_for_payement"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtView_Rejected_TrnsType"
        android:drawableStart="@drawable/ic_card_membership_black_24dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtView_Rejected_TrnsBankOfRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_of_request"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtView_Rejected_TrnsCardPayment"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtView_Rejected_TrnsBankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtView_Rejected_TrnsBankOfRequest"
        android:layout_marginTop="23dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:text="@string/bank_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtView_Rejected_TrnsAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtView_Rejected_TrnsBankName"
        android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
        android:textStyle="bold"/>

</RelativeLayout>