<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <!--
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>
   -->

    <ImageView
        android:id="@+id/imageBankId_GeneralData"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/property_image" />


    <LinearLayout
        android:id="@+id/infoSection_GeneralData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageBankId_GeneralData"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtView_idTransaction_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:text="@string/id_transaction"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtView_idMerchant_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/id_merchant"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtView_idTerminalMerchant_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/id_terminal_merchant"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtView_idHost_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/id_host"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pricingSection_GeneralData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoSection_GeneralData"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtView_amountAuthorisedNumeric_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:text="@string/amount"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtView_etatTransaction_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtView_amountAuthorisedNumeric_GeneralData"
            android:text="@string/transaction_status" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bankingSection_GeneralData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pricingSection_GeneralData"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtView_BankName_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:text="@string/bank_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtView_BankOfRequest_GeneralData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtView_BankName_GeneralData"
            android:text="@string/bank_of_request"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_getExtendedTransactionData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/bankingSection_GeneralData"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="13dp"
        app:srcCompat="@drawable/ic_info_black_24dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/img_getTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/img_getExtendedTransactionData"
        android:layout_marginStart="22dp"
        app:srcCompat="@drawable/ic_card_membership_black_24dp"
        android:contentDescription="@string/todo" />

</RelativeLayout>
